[package]
name = "noahw_design_together"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.46.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.2"
rand = "0.9.1"
